--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
   },
   "homepage": "https://github.com/adityayadav71/resume-uploader-nodejs#readme",
   "devDependencies": {
+    "dotenv": "^16.0.3",
     "nodemon": "^2.0.20"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "http": "^0.0.1-security"
+    "formidable": "^2.0.1",
+    "http": "^0.0.1-security",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.25.4"
   }
 }
